--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Camp Choref</title>
+    <link rel="shortcut icon" type="image/jpg" href="media/1g2aCqXa.ico" />
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.cdnfonts.com/css/jokerman" rel="stylesheet">
 </head>
@@ -14,12 +15,14 @@
     <header id="header">
         <div id="headerLogo">
             <img id="logo" src="media/pic.png" alt="Camp Choref logo">
-            <p id="subheader">The best way to cool off this summer!</p>
         </div>
-        <div id="registerButtonDiv">
+        <div id="buttonDiv">
         <button id="register"> <p>Click Here to <br> Register Now!</p> </button>
-        </div>
-        <div id="detailsLinkDiv"><a id="detailsLink" href="#header">See Details</a></div>
+    <button id="detailsLink">
+        <p>Click Here to <br> See Details!</p>
+    </button>
+    </div>
+        <!--div id="detailsLinkDiv"><a id="detailsLink" href="#header">Click here to <br> see Details</a></div!-->
     </header>
     
     <iframe id="JotFormIFrame-231155895577166" title="Class Registration" onload="window.parent.scrollTo(0,0)"
@@ -31,7 +34,7 @@
         <img id="flyerImg" src="media/flyer3.png" alt="Camp flyer with details">
     </div>
     <div id="detailsDiv">
-        <img src="media/details.png" alt="details of camp for 2023 season">
+        <img id="detailsImg" src="media/details.png" alt="details of camp for 2023 season">
 </div>
 
 
